[gd_scene load_steps=5 format=3 uid="uid://bpbmk7rt2sikx"]

[ext_resource type="Script" path="res://levels/level_1/Scripts/level_1_screen.gd" id="1_x41gi"]
[ext_resource type="PackedScene" uid="uid://cd25yxxiep0a5" path="res://levels/level_0_5/level_0_5.tscn" id="2_jdjf6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_f7jsx"]
blend_mode = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_dblgw"]
viewport_path = NodePath("Test")

[node name="level_1_screen" type="Node2D"]
script = ExtResource("1_x41gi")

[node name="GameView" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ViewportDisplay" type="TextureRect" parent="GameView"]
visible = false
material = SubResource("CanvasItemMaterial_f7jsx")
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource("ViewportTexture_dblgw")
metadata/_edit_use_anchors_ = true

[node name="ViewportDisplay2" type="TextureRect" parent="GameView"]
material = SubResource("CanvasItemMaterial_f7jsx")
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource("ViewportTexture_dblgw")
metadata/_edit_use_anchors_ = true

[node name="GameViewport" type="SubViewport" parent="."]
disable_3d = true
physics_object_picking = true
size = Vector2i(300, 300)
size_2d_override = Vector2i(640, 360)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Test" type="SubViewport" parent="."]
disable_3d = true
physics_object_picking = true
physics_object_picking_sort = true
size = Vector2i(1920, 1080)
size_2d_override = Vector2i(640, 360)
size_2d_override_stretch = true

[node name="level_0" parent="Test" instance=ExtResource("2_jdjf6")]
